amaroK ChangeLog
================
(c) 2002-2004 the amaroK authors.


VERSION 1.2-beta3:
  FIX: Configure check was missing for the Konqueror Sidebar
       (depends on KDEBASE).
  FIX: Browser splitter was drawn incorrectly with some styles. (BR 95333)
  ADD: DCOP call for relative seek. Patch by Andreas Pfaller. (BR 84989)
  CHG: Bumped TagLib dependency to 1.3.1. (1.3 is too damn buggy)
  FIX: CTRL-M can show the menubar again after hiding. (BR 94139)
  ADD: Support for last.fm streams.
  FIX: amaroK icon shows correctly in window decoration under GNOME.
  ADD: Support for ID3v2 cover images. (Thanks to M. Thiesen!) (BR 88492)
  ADD: DCOP calls for the status of Random Mode, Repeat Playlist and
       Repeat Track.
  ADD: DCOP call to return the sample rate.
  ADD: DCOP call to return the track number. (BR 94825)
  FIX: GStreamer-engine provides better scope synchronisation.
  ADD: Save current track position and play queue on exit. (BR 90379)
  FIX: Fix Directory column on playlist, show absolute directory path
       instead of empty string. (BR 90361)
  ADD: DCOP call to scan your collection. (BR 84621)
  FIX: When an engine fails to load, respect the rank while choosing
       the next engine.

VERSION 1.2-beta2:
  FIX: Classic amaroK theme looks better.
  ADD: Context Browser has CSS styling.
  FIX: Cover fetching improvements/fixes.
  ADD: Last played: yesterday, etc. in ContextBrowser.
  FIX: Big speedup for PlaylistLoader, when adding many items.
  ADD: Show songs you once played, but didn't play for the longest
       time on ContextBrowser's Home-page. (least played) (BR 89479)
  FIX: Don't crash on song switch, when there's only one visible
       playlist item and repeat-list is activated. (BR 94030)
  CHG: Add and queue tracks after the current track. (BR 94121)
  ADD: DCOP call to raise the equalizer configuration dialog.
  ADD: Konqueror sidebar to view playing info and control amaroK.
  ADD: DCOP call to clear the playlist. (BR 90149)