@@ -35,9 +35,6 @@ SHORT-TERM (URGENT):
 
           <mxcl>   With one track in pls and repeat and random mode on, amaroK crashes at track end.
 
-          <mxcl>   You can't add or drag albums from the context browser anymore 
-		   #86020 patch in b.k.o
-
           <markey> "Handbook" and "About" menu entries are disabled (greyed out) for some people.
                    For the life of me I can't reproduce this, even with KDE 3.3.
           <madp8>  After merge of Head into make_it_cool the About amaroK entry works again, but now Report Bug is disabled.
